Implement shared app shell and stub pages

--- a/Analytics.html
+++ b/Analytics.html
@@ -11,7 +11,7 @@
       <div class="header__title">Analytics</div>
       <div id="date-controls"></div>
     </div>
-    <p class="coming-soon">Coming soon</p>
+    <p style="opacity:.7">Coming soon.</p>
   </main>
 </div>
 <script defer src="./assets/js/app-shell.js"></script>
