Add wellness dashboard and improve HR summary

--- a/Summary.html
+++ b/Summary.html
@@ -2,8 +2,8 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Summary</title>
-<link rel="stylesheet" href="./assets/css/app-shell.css">
-<link rel="stylesheet" href="./assets/css/hr-board.neon.css">
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=20240920">
+<link rel="stylesheet" href="./assets/css/hr-board.neon.css?v=20240920">
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -12,10 +12,10 @@
       <div class="header__title">Summary</div>
       <div id="date-controls"></div>
     </div>
-    <section id="hr-board" class="hr-panel"></section>
+    <section id="hr-board" class="hr-panel" aria-live="polite"></section>
   </main>
 </div>
-<script defer src="./assets/js/app-shell.js"></script>
-<script defer src="./assets/js/date-controls.js"></script>
-<script defer src="./assets/js/hr-board.neon.js"></script>
+<script defer src="./assets/js/app-shell.js?v=20240920"></script>
+<script defer src="./assets/js/date-controls.js?v=20240920"></script>
+<script defer src="./assets/js/hr-board.neon.js?v=20240920"></script>
 </body></html>
