--- a/Analytics.html
+++ b/Analytics.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Analytics</title>
-<link rel="stylesheet" href="./assets/css/app-shell.css">
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=20240920">
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -14,6 +14,6 @@
     <p style="opacity:.7">Coming soon.</p>
   </main>
 </div>
-<script defer src="./assets/js/app-shell.js"></script>
-<script defer src="./assets/js/date-controls.js"></script>
+<script defer src="./assets/js/app-shell.js?v=20240920"></script>
+<script defer src="./assets/js/date-controls.js?v=20240920"></script>
 </body></html>
