--- a/Summary.html
+++ b/Summary.html
@@ -2,6 +2,8 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Summary</title>
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20240920">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=20240920">
 <link rel="stylesheet" href="./assets/css/app-shell.css?v=20240920">
 <link rel="stylesheet" href="./assets/css/hr-board.neon.css?v=20240920">
 </head><body>
@@ -12,7 +14,7 @@
       <div class="header__title">Summary</div>
       <div id="date-controls"></div>
     </div>
-    <section id="hr-board" class="hr-panel" aria-live="polite"></section>
+    <section id="hr-board" class="panel" aria-live="polite"></section>
   </main>
 </div>
 <script defer src="./assets/js/app-shell.js?v=20240920"></script>
