--- a/Corporate.html
+++ b/Corporate.html
@@ -12,7 +12,7 @@
   <main class="main main--corporate">
     <div class="header header--corporate">
       <div class="header__title">
-        <span>Corporate</span>
+        <span data-i18n="header.corporate">Corporate</span>
         <span class="pill pill--neutral has-tooltip" tabindex="0" aria-describedby="tooltip-agg-corp">
           Aggregates only · No raw biosignals
           <span class="tooltip" id="tooltip-agg-corp" role="tooltip">Aggregates only; no raw ECG/HRV, no person-level drilldown.</span>
@@ -23,8 +23,10 @@
         </span>
       </div>
       <div class="header__actions">
-        <button class="btn btn--ghost" type="button" id="scenario-trigger">Load Night-Shift Scenario</button>
+        <button class="btn btn--ghost" type="button" id="scenario-trigger" data-i18n="btn.loadScenario">Load Night-Shift Scenario</button>
+        <div id="team-filter" class="team-filter"></div>
         <div id="date-controls"></div>
+        <button class="header__icon" type="button" data-about-trigger aria-label="About"></button>
       </div>
     </div>
     <p id="corporate-range-caption" class="header__caption" aria-live="polite"></p>
@@ -76,9 +78,46 @@
       <div class="activity-table" id="corporate-activity" aria-live="polite"></div>
     </section>
     <footer class="corp-footer" aria-label="Compliance note">EU cloud, encryption at rest/in transit</footer>
+    <div class="drawer__overlay" id="event-drawer-overlay" aria-hidden="true"></div>
+    <aside class="drawer" id="event-drawer" role="dialog" aria-modal="true" aria-hidden="true" aria-labelledby="event-drawer-title">
+      <header class="drawer__header">
+        <h2 class="drawer__title" id="event-drawer-title" data-i18n="drawer.title">Event details</h2>
+        <button class="drawer__close" type="button" id="event-drawer-close" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+        <span id="event-drawer-severity" class="pill pill--neutral"></span>
+        <dl class="drawer__meta">
+          <dt data-i18n="drawer.metaTeam">Team</dt>
+          <dd id="event-drawer-team"></dd>
+          <dt data-i18n="drawer.metaTime">Detected</dt>
+          <dd id="event-drawer-ts"></dd>
+        </dl>
+      </header>
+      <div class="drawer__body">
+        <p id="event-drawer-detail"></p>
+        <div>
+          <h3 class="drawer__subtitle" data-i18n="drawer.rule">Detection rule</h3>
+          <p id="event-drawer-rule"></p>
+        </div>
+        <div>
+          <h3 class="drawer__subtitle" data-i18n="drawer.thresholds">Thresholds</h3>
+          <dl id="event-drawer-thresholds" class="drawer__meta"></dl>
+        </div>
+      </div>
+      <footer class="drawer__footer">
+        <div class="drawer__links">
+          <button type="button" class="btn btn--ghost" id="drawer-link-heatmap" data-i18n="events.filterHeatmap">Filter heatmap to date</button>
+          <button type="button" class="btn btn--ghost" id="drawer-link-activity" data-i18n="events.openLog">Open activity log</button>
+        </div>
+      </footer>
+    </aside>
   </main>
 </div>
+<script defer src="./assets/js/data-loader.js?v=20240920"></script>
+<script defer src="./assets/js/i18n.js?v=20240920"></script>
 <script defer src="./assets/js/app-shell.js?v=20240920"></script>
 <script defer src="./assets/js/date-controls.js?v=20240920"></script>
+<script defer src="./assets/js/team-filter.js?v=20240920"></script>
+<script defer src="./assets/js/about.js?v=20240920"></script>
 <script defer src="./assets/js/corporate.js?v=20240920"></script>
 </body></html>
