--- a/Settings.html
+++ b/Settings.html
@@ -2,18 +2,26 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Settings</title>
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20240920">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=20240920">
 <link rel="stylesheet" href="./assets/css/app-shell.css?v=20240920">
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
   <main class="main">
     <div class="header">
-      <div class="header__title">Settings</div>
-      <div id="date-controls"></div>
+      <div class="header__title" data-i18n="header.settings">Settings</div>
+      <div class="header__actions">
+        <div id="date-controls"></div>
+        <button class="header__icon" type="button" data-about-trigger aria-label="About"></button>
+      </div>
     </div>
     <p style="opacity:.7">Coming soon.</p>
   </main>
 </div>
+<script defer src="./assets/js/data-loader.js?v=20240920"></script>
+<script defer src="./assets/js/i18n.js?v=20240920"></script>
 <script defer src="./assets/js/app-shell.js?v=20240920"></script>
 <script defer src="./assets/js/date-controls.js?v=20240920"></script>
+<script defer src="./assets/js/about.js?v=20240920"></script>
 </body></html>
