--- a/Corporate.html
+++ b/Corporate.html
@@ -114,6 +114,9 @@
   </main>
 </div>
 <script defer src="./assets/js/data-loader.js?v=20240920"></script>
+<script defer src="./assets/js/auth.js?v=20240920"></script>
+<script defer src="./assets/js/guards.js?v=20240920"></script>
+<script defer src="./assets/js/theme.js?v=20240920"></script>
 <script defer src="./assets/js/i18n.js?v=20240920"></script>
 <script defer src="./assets/js/app-shell.js?v=20240920"></script>
 <script defer src="./assets/js/date-controls.js?v=20240920"></script>
