Fix sidebar translation markup

--- a/Pilot.html
+++ b/Pilot.html
@@ -2,11 +2,11 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Pilot Dashboard</title>
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20240920">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=20240920">
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=20240920">
-<link rel="stylesheet" href="./assets/css/engagement.css?v=20240920">
-<link rel="stylesheet" href="./assets/css/pilot.css?v=20240920">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css">
+<link rel="stylesheet" href="./assets/css/ui.components.css">
+<link rel="stylesheet" href="./assets/css/app-shell.css">
+<link rel="stylesheet" href="./assets/css/engagement.css">
+<link rel="stylesheet" href="./assets/css/pilot.css">
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -28,15 +28,16 @@
     <p class="pilot-note" data-i18n="pilot.gdpr">GDPR note: dashboards expose only aggregates with no personal data.</p>
   </main>
 </div>
-<script defer src="./assets/js/data-loader.js?v=20240920"></script>
-<script defer src="./assets/js/auth.js?v=20240920"></script>
-<script defer src="./assets/js/guards.js?v=20240920"></script>
-<script defer src="./assets/js/theme.js?v=20240920"></script>
-<script defer src="./assets/js/i18n.js?v=20240920"></script>
-<script defer src="./assets/js/app-shell.js?v=20240920"></script>
-<script defer src="./assets/js/date-controls.js?v=20240920"></script>
-<script defer src="./assets/js/team-filter.js?v=20240920"></script>
-<script defer src="./assets/js/about.js?v=20240920"></script>
-<script defer src="./assets/js/exporter.js?v=20240920"></script>
-<script defer src="./assets/js/pilot.js?v=20240920"></script>
+<script defer src="./assets/js/data-loader.js"></script>
+<script defer src="./assets/js/auth.js"></script>
+<script defer src="./assets/js/guards.js"></script>
+<script defer src="./assets/js/theme.js"></script>
+<script defer src="./assets/js/i18n.js"></script>
+<script defer src="./assets/js/version.js"></script>
+<script defer src="./assets/js/app-shell.js"></script>
+<script defer src="./assets/js/date-controls.js"></script>
+<script defer src="./assets/js/team-filter.js"></script>
+<script defer src="./assets/js/about.js"></script>
+<script defer src="./assets/js/exporter.js"></script>
+<script defer src="./assets/js/pilot.js"></script>
 </body></html>
