--- a/Devices.html
+++ b/Devices.html
@@ -2,10 +2,10 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Devices</title>
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20240920">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=20240920">
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=20240920">
-<link rel="stylesheet" href="./assets/css/devices.css?v=20240920">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css">
+<link rel="stylesheet" href="./assets/css/ui.components.css">
+<link rel="stylesheet" href="./assets/css/app-shell.css">
+<link rel="stylesheet" href="./assets/css/devices.css">
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -38,14 +38,15 @@
     </section>
   </main>
 </div>
-<script defer src="./assets/js/data-loader.js?v=20240920"></script>
-<script defer src="./assets/js/auth.js?v=20240920"></script>
-<script defer src="./assets/js/guards.js?v=20240920"></script>
-<script defer src="./assets/js/theme.js?v=20240920"></script>
-<script defer src="./assets/js/i18n.js?v=20240920"></script>
-<script defer src="./assets/js/app-shell.js?v=20240920"></script>
-<script defer src="./assets/js/date-controls.js?v=20240920"></script>
-<script defer src="./assets/js/team-filter.js?v=20240920"></script>
-<script defer src="./assets/js/about.js?v=20240920"></script>
-<script defer src="./assets/js/devices.js?v=20240920"></script>
+<script defer src="./assets/js/data-loader.js"></script>
+<script defer src="./assets/js/auth.js"></script>
+<script defer src="./assets/js/guards.js"></script>
+<script defer src="./assets/js/theme.js"></script>
+<script defer src="./assets/js/i18n.js"></script>
+<script defer src="./assets/js/version.js"></script>
+<script defer src="./assets/js/app-shell.js"></script>
+<script defer src="./assets/js/date-controls.js"></script>
+<script defer src="./assets/js/team-filter.js"></script>
+<script defer src="./assets/js/about.js"></script>
+<script defer src="./assets/js/devices.js"></script>
 </body></html>
