--- a/User.html
+++ b/User.html
@@ -2,17 +2,17 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Wellness</title>
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20240920">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=20240920">
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=20240920">
-<link rel="stylesheet" href="./assets/css/wellness.css?v=20240920">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css">
+<link rel="stylesheet" href="./assets/css/ui.components.css">
+<link rel="stylesheet" href="./assets/css/app-shell.css">
+<link rel="stylesheet" href="./assets/css/wellness.css">
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
   <main class="main">
     <div class="header">
-      <div class="header__title" data-i18n="header.wellness">
-        <span>Wellness</span>
+      <div class="header__title">
+        <span data-i18n="header.wellness">Wellness</span>
         <span class="pill pill--neutral has-tooltip" tabindex="0" aria-describedby="tooltip-agg-wellness">
           Aggregates only · No raw biosignals
           <span class="tooltip" id="tooltip-agg-wellness" role="tooltip">Aggregates only; no raw ECG/HRV, no person-level drilldown.</span>
@@ -142,15 +142,16 @@
     </section>
   </main>
 </div>
-<script defer src="./assets/js/data-loader.js?v=20240920"></script>
-<script defer src="./assets/js/auth.js?v=20240920"></script>
-<script defer src="./assets/js/guards.js?v=20240920"></script>
-<script defer src="./assets/js/theme.js?v=20240920"></script>
-<script defer src="./assets/js/i18n.js?v=20240920"></script>
-<script defer src="./assets/js/app-shell.js?v=20240920"></script>
-<script defer src="./assets/js/date-controls.js?v=20240920"></script>
-<script defer src="./assets/js/about.js?v=20240920"></script>
-<script defer src="./assets/js/mock-stream.js?v=20240920"></script>
-<script defer src="./assets/js/wellbeing.compute.js?v=20240920"></script>
-<script defer src="./assets/js/wellness-page.js?v=20240920"></script>
+<script defer src="./assets/js/data-loader.js"></script>
+<script defer src="./assets/js/auth.js"></script>
+<script defer src="./assets/js/guards.js"></script>
+<script defer src="./assets/js/theme.js"></script>
+<script defer src="./assets/js/i18n.js"></script>
+<script defer src="./assets/js/version.js"></script>
+<script defer src="./assets/js/app-shell.js"></script>
+<script defer src="./assets/js/date-controls.js"></script>
+<script defer src="./assets/js/about.js"></script>
+<script defer src="./assets/js/mock-stream.js"></script>
+<script defer src="./assets/js/wellbeing.compute.js"></script>
+<script defer src="./assets/js/wellness-page.js"></script>
 </body></html>
