--- a/Engagement.html
+++ b/Engagement.html
@@ -2,11 +2,12 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Engagement</title>
-<link rel="stylesheet" href="./assets/css/ui.tokens.css">
-<link rel="stylesheet" href="./assets/css/ui.components.css">
-<link rel="stylesheet" href="./assets/css/app-shell.css">
-<link rel="stylesheet" href="./assets/css/corporate.css">
-<link rel="stylesheet" href="./assets/css/engagement.css">
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251014">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251014">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251014">
+<!-- страничные стили (если есть) -->
+<link rel="stylesheet" href="./assets/css/corporate.css?v=20251014">
+<link rel="stylesheet" href="./assets/css/engagement.css?v=20251014">
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -29,15 +30,16 @@
     </section>
   </main>
 </div>
-<script defer src="./assets/js/data-loader.js"></script>
-<script defer src="./assets/js/auth.js"></script>
-<script defer src="./assets/js/guards.js"></script>
-<script defer src="./assets/js/theme.js"></script>
 <script defer src="./assets/js/i18n.js"></script>
 <script defer src="./assets/js/version.js"></script>
 <script defer src="./assets/js/app-shell.js"></script>
 <script defer src="./assets/js/date-controls.js"></script>
 <script defer src="./assets/js/team-filter.js"></script>
+<!-- страничные скрипты -->
+<script defer src="./assets/js/data-loader.js"></script>
+<script defer src="./assets/js/auth.js"></script>
+<script defer src="./assets/js/guards.js"></script>
+<script defer src="./assets/js/theme.js"></script>
 <script defer src="./assets/js/about.js"></script>
 <script defer src="./assets/js/engagement.js"></script>
 </body></html>
