fix(pages): restore Corporate/Summary rendering — relative asset paths, i18n boot, KPI TDZ fix, cache-busting

--- a/Corporate.html
+++ b/Corporate.html
@@ -2,11 +2,11 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Corporate</title>
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251014">
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251014">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251014">
-<!-- страничные стили (если есть) -->
-<link rel="stylesheet" href="./assets/css/corporate.css?v=20251014">
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251019">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251019">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251019">
+<!-- optional page CSS -->
+<link rel="stylesheet" href="./assets/css/corporate.css?v=20251019">
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -36,7 +36,7 @@
     </div>
 
     <section id="corp-overview" class="panel corp-panel is-active" role="tabpanel" aria-labelledby="tab-overview">
-      <div class="kpi-grid" id="corporate-kpis"></div>
+      <div class="kpi-grid" id="corp-kpi-grid"></div>
     </section>
 
     <section id="corp-heatmap" class="panel corp-panel" role="tabpanel" aria-labelledby="tab-heatmap" hidden>
@@ -115,11 +115,11 @@
 <script defer src="./assets/js/app-shell.js"></script>
 <script defer src="./assets/js/date-controls.js"></script>
 <script defer src="./assets/js/team-filter.js"></script>
-<!-- страничные скрипты -->
-<script defer src="./assets/js/data-loader.js"></script>
-<script defer src="./assets/js/auth.js"></script>
-<script defer src="./assets/js/guards.js"></script>
-<script defer src="./assets/js/theme.js"></script>
-<script defer src="./assets/js/about.js"></script>
-<script defer src="./assets/js/corporate.js"></script>
+<!-- page script last -->
+<script defer src="./assets/js/data-loader.js?v=20251019"></script>
+<script defer src="./assets/js/auth.js?v=20251019"></script>
+<script defer src="./assets/js/guards.js?v=20251019"></script>
+<script defer src="./assets/js/theme.js?v=20251019"></script>
+<script defer src="./assets/js/about.js?v=20251019"></script>
+<script defer src="./assets/js/corporate.js?v=20251019"></script>
 </body></html>
