--- a/Devices.html
+++ b/Devices.html
@@ -2,11 +2,11 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Devices</title>
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251014">
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251014">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251014">
-<!-- страничные стили (если есть) -->
-<link rel="stylesheet" href="./assets/css/devices.css?v=20251014">
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251019">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251019">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251019">
+<!-- optional page CSS -->
+<link rel="stylesheet" href="./assets/css/devices.css?v=20251019">
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -44,11 +44,11 @@
 <script defer src="./assets/js/app-shell.js"></script>
 <script defer src="./assets/js/date-controls.js"></script>
 <script defer src="./assets/js/team-filter.js"></script>
-<!-- страничные скрипты -->
-<script defer src="./assets/js/data-loader.js"></script>
-<script defer src="./assets/js/auth.js"></script>
-<script defer src="./assets/js/guards.js"></script>
-<script defer src="./assets/js/theme.js"></script>
-<script defer src="./assets/js/about.js"></script>
-<script defer src="./assets/js/devices.js"></script>
+<!-- page script last -->
+<script defer src="./assets/js/data-loader.js?v=20251019"></script>
+<script defer src="./assets/js/auth.js?v=20251019"></script>
+<script defer src="./assets/js/guards.js?v=20251019"></script>
+<script defer src="./assets/js/theme.js?v=20251019"></script>
+<script defer src="./assets/js/about.js?v=20251019"></script>
+<script defer src="./assets/js/devices.js?v=20251019"></script>
 </body></html>
